Implement pagination, sorting, filtering, dashboard analytics, AWS deployment, and update README